[gd_scene load_steps=4 format=3 uid="uid://de3cgrkaxsehf"]

[ext_resource type="Script" uid="uid://bxag267l3mwwp" path="res://addons/channel_surfer/data/schema/debug_log.gd" id="1_yxo45"]
[ext_resource type="Texture2D" uid="uid://bsu6x77fkrvwl" path="res://addons/channel_surfer/assets/arrow_icon.png" id="2_xdv5m"]
[ext_resource type="Texture2D" uid="uid://dwv00nqrkul7d" path="res://addons/channel_surfer/assets/arrow_collapsed_icon.png" id="3_56nnr"]

[node name="DebugLog" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_yxo45")
collapse_icon = ExtResource("3_56nnr")
expand_icon = ExtResource("2_xdv5m")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
clip_contents = true
custom_minimum_size = Vector2(50, 20)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 4

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(50, 20)
layout_mode = 2

[node name="CollapseButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
toggle_mode = true
icon = ExtResource("2_xdv5m")
flat = true

[node name="ScenePathLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "res://node_1.tscn"

[node name="SceneNavButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
icon = ExtResource("3_56nnr")

[node name="InstanceErrors" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
